# clean-python-package

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  handler.py  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
