[tool.poetry]
name = "clean-python-package"
version = "0.1.0"
description = ""
authors = ["Eric Barrow <eric.barrow@pnmac.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pexpect = "^4.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
