[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"



[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
license = "{{ cookiecutter.license|upper }}"

authors = []

readme = "README.md"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

black = "^19.10b0"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^0.1.3"
nitpick = "^0.21.3"
pre-commit = "^2.1.0"

safety = "^1.8"

pytest = "^5.3"
pytest-cov = "^2.7"
pytest-randomly = "^3.1"

sphinx = "^2.2"
sphinx-autodoc-typehints = "<1.11"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.5"
 