[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"

authors = []

readme = "README.md"

keywords = []

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
nitpick = "^0.21.3"
pre-commit = "^2.1.0"

safety = "^1.8"

pytest = "^5.3"

sphinx = "^2.2"
tomlkit = "^0.5"