[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"

authors = []

readme = "README.md"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
newrelic = "^5.12.0"
logzero = "^1.5.0"

[tool.poetry.dev-dependencies]

sherpa = { git = "ssh://git@gitlab.pnmac.com/gitlab-deploy/edma/data.Sherpa.git", branch = "dev"}
isort = "^4.3.21"
black = "^19.10b0"
safety = "^1.8"
sphinx = "^2.2"
boto3 = "^1.18.26"
pytest = "^6.2.4"
aws-lambda-powertools = "^1.20.1"
